--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+<div id="nav-header">
+	<span class="heydings-text nav-item">y</div>
+</div>
+<%= yield :main %>
 
 </body>
 </html>
