--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 <div id="nav-header">
 	<span class="heydings-text nav-item">y</div>
+	<!-- <span class="nav-item nyancat"><img src="/assets/catNyan.gif" alt=""></span>	 -->
 </div>
 <%= yield :main %>
 
