--- a/app/views/nyans/index.html
+++ b/app/views/nyans/index.html
@@ -13,7 +13,7 @@
 		<br>
 		<div id="find-weather">
 			<input type="text" id="zip-code" tabindex="1" placeholder="zip code">
-			<div id="get-weather" tabindex="2" type="submit"><span>Get Weather</span><img src="loader.gif" alt="" class="loader"></div>
+			<div id="get-weather" tabindex="2" type="submit"><span>Get Weather</span><img src="/assets/loader.gif" alt="" class="loader"></div>
 		</div>
 
 	</div>
