add another char to bg. hide loader

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -40,6 +40,7 @@ body > #nav-header {
 	margin-left: -8px;
 	height: 65em;
 	width: 101.5%;
+	margin-bottom: -8px;
 	background-color: #04819E;
 	top: 0;
 	left: 0;
