--- a/app/views/nyans/index.html
+++ b/app/views/nyans/index.html
@@ -10,7 +10,7 @@
 		<h1>check the weather</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<p>coming soon: ability to change the weather</p>
-		<br>
+		<br/>
 		<div id="find-weather">
 			<input type="text" id="zip-code" tabindex="1" placeholder="zip code">
 			<div id="get-weather" tabindex="2" type="submit"><span>Get Weather</span><img src="/assets/loader.gif" alt="" class="loader"></div>
@@ -21,7 +21,7 @@
 	<div id="weather-out">
 		<div id="weather-text">
 			<div class="day today">
-				<h3>today</h3>
+				<h3>right now</h3>
 				<ul class="weather-container">
 					<li class="desc"></li>
 					<li class="temp"></li>
@@ -37,7 +37,9 @@
 		</div>
 	</div>
 
-	<div id="left-side"></div>
+	<div id="error-text">
+		<p></p>
+	</div>
 
 	<div id="right-side"></div>
 </div>	
